welcome.lessons.welcome.loopfor.LoopFor.scala.error
Program:2: error: '(' expected but identifier found.
for i <- 0 to 6
    ^