welcome.lessons.welcome.loopfor.LoopFor.scala.code
for i <- 0 to 6
while(estSurBiscuit==false){
	avancer Hungryi();
}
